[project]
name = "ai-agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.2",
    "python-dotenv>=1.1.1",
]
